--- a/style.css
+++ b/style.css
@@ -2388,7 +2388,6 @@ p {
   display: flex;
   justify-content: center;
   gap: 8px;
-  margin-bottom: 48px;
 }
 
 .reviews__dot {
